Use openapi specification in deployments and update dtypes (#30)

--- a/examples/autoencoder-exploration.ipynb
+++ b/examples/autoencoder-exploration.ipynb
@@ -26,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
     "import urllib\n",
     "import zipfile\n",
     "\n",
@@ -51,8 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fashion_mnist_path, _ = urllib.request.urlretrieve(\n",
-    "    'https://storage.googleapis.com/bucket-8732/fashion.zip')"
+    "dataset_url = 'https://storage.googleapis.com/bucket-8732/fashion.zip'\n",
+    "with urllib.request.urlopen(dataset_url) as http:\n",
+    "    fashion_mnist_bin = io.BytesIO(http.read())"
    ]
   },
   {
@@ -69,11 +71,11 @@
    "outputs": [],
    "source": [
     "# Open Peltarion platform compatible zipfile\n",
-    "with zipfile.ZipFile(fashion_mnist_path, 'r') as z:\n",
-    "    index_file = z.open('index.csv')\n",
+    "with zipfile.ZipFile(fashion_mnist_bin, 'r') as z:\n",
+    "    index_file = z.open('fashion/index.csv')\n",
     "    dataset = pd.read_csv(index_file)\n",
     "    dataset['image'] = dataset['image'].apply(\n",
-    "        lambda path: Image.open(z.open(path))\n",
+    "        lambda path: Image.open(z.open('fashion/' + path))\n",
     "    )"
    ]
   },
@@ -94,9 +96,35 @@
     "deployment = sidekick.Deployment(\n",
     "    url='<url>',\n",
     "    token='<token>',\n",
-    "    dtypes_in={'image': 'Image (28x28x1)'},\n",
-    "    dtypes_out={'image': 'Image (28x28x1)'}\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verify the features used for input and output in the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': [FeatureSpec(name=\"image\", dtype=\"image\", shape=(28, 28, 1))],\n",
+       " 'output': [FeatureSpec(name=\"image\", dtype=\"image\", shape=(28, 28, 1))]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{'input': deployment.feature_specs_in, 'output': deployment.feature_specs_out}"
    ]
   },
   {
@@ -109,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,14 +154,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img style=\"float: left;\" src=\"image/interactive_fashion_mnist.png\">\n",
+    "<p style=\"float: left; width: 400px;\">\n",
+    "    Lazy predictions are convinient because they allow you to interactively explore your predictions while requesting new ones when needed. Here's a simple demo illustrating how to do that, it should look something like the image on the left. Try it out!\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7e641db1e1f47f5aec8a1c559e19e6f",
+       "model_id": "5ee4a7eac64a4241a80f2495d763cb68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
